Stop card from getting too big when resizing window.

--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@ li {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0 10px 30px;
+    padding: 10px 0 10px 30px;
 }
 
 .bottom > .left {
@@ -187,7 +187,7 @@ h1, h2, h3 {
 
 .card-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 30px;
     margin: 20px 20px 0 0;
 }
